--- a/custom_components/electrolux_status/manifest.json
+++ b/custom_components/electrolux_status/manifest.json
@@ -9,7 +9,10 @@
   "iot_class": "cloud_push",
   "issue_tracker": "https://github.com/albaintor/homeassistant_electrolux_status/issues",
   "loggers": ["pyelectroluxocp"],
-  "requirements": ["pyelectroluxocp==0.0.19"],
+  "requirements": [
+    "pyelectroluxocp==0.0.19",
+    "aiofiles==24.1.0"
+  ],
   "ssdp": [],
   "version": "2.0.9",
   "zeroconf": []
